SFDCProject/src/objects/Land_Use__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permitted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Permitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>SFR (Single Family Residence)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONDOMINIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUPLEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MULTI FAMILY DWELLING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMERCIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDUSTRIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER (PERMITTED)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOWNHOUSE / ROWHOUSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER (NOT PERMITTED)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER (VERIFY RATE SCHEDULE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE HOME (VERIFY PERM. FOUNDATION)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Land Use Information</label>
    <nameField>
        <label>Land Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Land Use Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>